--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
+# Environment variables
 .env
-.DS_Store
 .env.local
 .env.development.local
 .env.test.local
@@ -7,5 +7,59 @@
 .env.development
 .env.test
 .env.production
+
+# Python
 .venv
-.vscode
+venv/
+env/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Logs
+*.log
+logs/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Temporary files
+*.tmp
+temp/
+tmp/
+
+# Documents (optional - uncomment if you don't want to commit PDFs)
+# *.pdf
+# services/*.pdf
